# to_the_hell

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  UI.py  game.py  main.py  man.py  man.spec  test.py  test1.py  utills.py
include/: hello.h
include/App/: GameApp.h
include/Common/: CommandBase.h  NotificationBase.h  ParamBase.h  Trigger.h
include/Core/: Engine.h
include/Model/: GameModel.h  MainMenuModel.h  Model.h  Platform.h  ScoreModel.h
include/Model/Entities/: Arrow.h  Bullet.h  Enemy.h  Pickup.h  Platform.h  Player.h  Skill.h
include/Utils/: Config.h
include/View/: GameView.h  MainMenuView.h  Page.h  ScoreView.h
include/View/UI/: Arrow.h  Bullet.h  Enemy.h  Pickup.h  Platform.h  Player.h  SkillBar.h
include/ViewModel/: GameViewModel.h  MainMenuViewModel.h  ScoreViewModel.h  ViewModel.h
src/: hello.cpp  main.cpp
src/App/: GameApp.cpp
src/Common/: Trigger.cpp
src/Core/: Engine.cpp
src/Model/: GameModel.cpp  MainMenuModel.cpp  ScoreModel.cpp
src/Model/Entities/: Arrow.cpp  Bullet.cpp  Enemy.cpp  Pickup.cpp  Platform.cpp  Player.cpp  Skill.cpp
src/View/: GameView.cpp  MainMenuView.cpp  ScoreView.cpp
src/View/UI/: Arrow.cpp  Bullet.cpp  Enemy.cpp  Pickup.cpp  Platform.cpp  Player.cpp  SkillBar.cpp
src/ViewModel/: GameViewModel.cpp  MainMenuViewModel.cpp  ScoreViewModel.cpp
